[gd_scene load_steps=7 format=3 uid="uid://dgebshndmyuv1"]

[ext_resource type="Script" uid="uid://d143dfsw3vh3w" path="res://Scripts/Screen/pause.gd" id="1_5a6ek"]
[ext_resource type="FontFile" uid="uid://burjh4d37tdqd" path="res://Assets/Font/PressStart2P-Regular.ttf" id="2_3fojq"]
[ext_resource type="Theme" uid="uid://basi5lxyxy175" path="res://Assets/Themes/Button/buttonMainMenu.tres" id="2_5a6ek"]
[ext_resource type="AudioStream" uid="uid://c0utk104dqgq3" path="res://Assets/Audio/UIAccept.mp3" id="4_3fojq"]
[ext_resource type="AudioStream" uid="uid://q48pf4wdpbwm" path="res://Assets/Audio/UIMove.mp3" id="5_nsogc"]

[sub_resource type="LabelSettings" id="LabelSettings_nsogc"]
font = ExtResource("2_3fojq")
font_size = 64
font_color = Color(0, 0, 0, 1)
outline_size = 8

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5a6ek")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.494118)

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -64.0
offset_right = 48.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 45

[node name="Label" type="Label" parent="Content"]
layout_mode = 2
text = "- Paused -"
label_settings = SubResource("LabelSettings_nsogc")

[node name="Buttons" type="VBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Resume" type="Button" parent="Content/Buttons"]
layout_mode = 2
theme = ExtResource("2_5a6ek")
text = "Resume"

[node name="Main Menu" type="Button" parent="Content/Buttons"]
layout_mode = 2
theme = ExtResource("2_5a6ek")
text = "Main Menu"

[node name="Quit" type="Button" parent="Content/Buttons"]
process_mode = 3
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_5a6ek")
text = "Quit"

[node name="Audio" type="Node" parent="."]

[node name="Accept" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_3fojq")
bus = &"Sfx"

[node name="Move" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_nsogc")
bus = &"Sfx"

[connection signal="button_down" from="Content/Buttons/Resume" to="." method="_on_resume_button_down"]
[connection signal="focus_entered" from="Content/Buttons/Resume" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Content/Buttons/Resume" to="." method="_on_focus_entered"]
[connection signal="button_down" from="Content/Buttons/Main Menu" to="." method="_on_main_menu_button_down"]
[connection signal="focus_entered" from="Content/Buttons/Main Menu" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Content/Buttons/Main Menu" to="." method="_on_focus_entered"]
[connection signal="button_down" from="Content/Buttons/Quit" to="." method="_on_quit_button_down"]
[connection signal="focus_entered" from="Content/Buttons/Quit" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Content/Buttons/Quit" to="." method="_on_focus_entered"]
